@@ -53,7 +53,7 @@ void get_web_page (str host, int port, strbuf *resp, cbb done)
   // times.  That is, fdcb will call us back every time the socket
   // 'fd' is available for writing.
   //
-  NONBLOCK (write_jg) { fdcb (fd, selwrite, @()); }
+  fdcb (fd, selwrite, @[write_jg]());
   
   while (true) {
     WAIT (write_jg);
@@ -100,7 +100,7 @@ void get_web_page (str host, int port, strbuf *resp, cbb done)
   // 
   // As before, but now we need to schedule a callback for reading
   //
-  NONBLOCK (read_jg) { fdcb (fd, selread, @()); }
+  fdcb (fd, selread, @[read_jg]());
   
   //
   // The details of the reading loop are almost identical to the
@@ -154,7 +154,7 @@ void get_fastest_web_page (vec<str> hosts, int port, cbb done)
   responses.setsize (hosts.size ());
   
   for (i = 0; i < hosts.size (); i++) {
-    NONBLOCK (CG, i) { get_web_page (hosts[i], port, &responses[i], @(res)); }
+    get_web_page (hosts[i], port, &responses[i], @[CG,i](res));
   }
   
   while (CG.need_join ()) {
